--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -1,3 +1,17 @@
+html, body, div {
+    padding: 0;
+    margin: 0;
+}
+
 body {
     font-family: sans-serif;
+}
+
+footer {
+    background: #808080;
+    color: white;
+    height: 180px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
