페이스북 이벤트 스타일 수정

--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -32,6 +32,10 @@ main section {
     padding: 10px;
 }
 
+.fb-event h3 {
+    display: inline;
+}
+
 footer {
     background: #808080;
     color: white;
