--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -9,6 +9,19 @@ body {
     line-height: 1.6;
 }
 
+.notice-container {
+    overflow: hidden;
+    white-space: nowrap;
+}
+.notice-text {
+    display: inline-block;
+    padding-left: 100%;
+    animation: marquee 15s linear infinite;
+}
+.notice-text:hover {
+    animation-play-state: paused;
+}
+
 .logo-image {
     width: 240px;
 }
@@ -43,4 +56,13 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@keyframes marquee{
+    0%{
+        transform: translate(0,0);
+    }
+    100%{
+        transform: translate(-100%, 0);
+    }
 }
