--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -29,8 +29,12 @@ body {
 .lead-image {
     width: 612px;
     max-width: 100%;
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     text-align: center;
+}
+
+.lead-image img {
+    max-width: 360px;
 }
 
 header {
