--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -1,3 +1,5 @@
+@import url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-2ExtraLight.woff');
+
 html, body, div {
     padding: 0;
     margin: 0;
@@ -5,7 +7,7 @@ html, body, div {
 }
 
 body {
-    font-family: sans-serif;
+    font-family: 'S-CoreDream-2ExtraLight';
     line-height: 1.6;
     word-break: keep-all;
 }
@@ -47,6 +49,14 @@ main section {
     max-width: 420px;
     margin: 0 auto;
     padding: 10px;
+}
+
+.project-list ul li {
+    text-align: left;
+    list-style-image: url(../assets/list-bullet.svg);
+}
+.project-list ul li.off {
+    list-style-image: url(../assets/list-bullet-gr.svg);
 }
 
 .fb-event h3 {
